Cycles node setup crash blender. #37706

Closed
opened 2013-12-05 11:38:35 +01:00 by Harrison Yu · 13 comments

System Information
*windows 7 pro 64 bit , GTX 580

Blender Version
Broken: Blender 2.69 r60995
Worked: Blender 2.XX rXXXXXX

Short description of error
My cycles node setup crash blender.

Exact steps for others to reproduce the error
Open attached file,select 'head.C.Render',navigate to materials panel in properties panel,blender crash.

**System Information** *windows 7 pro 64 bit , GTX 580 **Blender Version** Broken: Blender 2.69 r60995 Worked: Blender 2.XX rXXXXXX **Short description of error** My cycles node setup crash blender. **Exact steps for others to reproduce the error** Open attached file,select 'head.C.Render',navigate to materials panel in properties panel,blender crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YonghaiYu

Added subscriber: @YonghaiYu

Added subscriber: @Sergey

Added subscriber: @Sergey

Don;t see the file here. Mind uploading it? :)

Don;t see the file here. Mind uploading it? :)
Author

This the file to test this bug.
texture_face_BI_C.pack.blend.7z

This the file to test this bug. [texture_face_BI_C.pack.blend.7z](https://archive.blender.org/developer/F36553/texture_face_BI_C.pack.blend.7z)

Added subscriber: @brecht

Added subscriber: @brecht

Can see 'Out of SVM stack space.' messages on the console.

@brecht, leaving this one to you.

Can see 'Out of SVM stack space.' messages on the console. @brecht, leaving this one to you.
Brecht Van Lommel was assigned by Sergey Sharybin 2013-12-05 12:43:04 +01:00

That mouth.uvswitch.c node group is kind of crazy and crosses a limitation of our shading system, which exists because of GPU rendering limitations. We should fix the crash but I'm not sure how easy it will be to make this setup actually work.

There must be a simpler way to create this setup with much fewer nodes, and automatically adapting to a given number of tiles in some image?

That mouth.uvswitch.c node group is kind of crazy and crosses a limitation of our shading system, which exists because of GPU rendering limitations. We should fix the crash but I'm not sure how easy it will be to make this setup actually work. There must be a simpler way to create this setup with much fewer nodes, and automatically adapting to a given number of tiles in some image?
Author

Thanks Brecht, Now I know is because of the limit, I will try to simplified it.
But it would be good if there is a warning.

Thanks Brecht, Now I know is because of the limit, I will try to simplified it. But it would be good if there is a warning.

This issue was referenced by blender/blender-addons-contrib@e9227c76d4

This issue was referenced by blender/blender-addons-contrib@e9227c76d480c5e7973b6bce03cce3ad414b0348

This issue was referenced by e9227c76d4

This issue was referenced by e9227c76d480c5e7973b6bce03cce3ad414b0348

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e9227c76d4.

Closed by commit e9227c76d4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37706
No description provided.