Fix T37706: avoid cycles crash when using a stack that exceeds SVM stack limits.

This should be pretty rare, the shader in question had many parallel node links
because of copying the nodes many times, which is inefficient to run anyway.