intern/cycles/render/svm.h
@@ -141,6 +141,7 @@ protected:
 	int max_stack_use;
 	uint mix_weight_offset;
 	bool use_multi_closure;
+	bool compile_failed;
 };
 
 CCL_NAMESPACE_END
